# website

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Website.cabal  cabal.project.freeze  docker-compose.yaml  dockerfile  main.css  main.js  test_db.sqlite-journal
app/: Main.hs
src/: Free.hs  Website.hs
src/Website/: Types.hs
src/Website/Auth/: Authentication.hs  Authorisation.hs
src/Website/Content/: Common.hs  Entry.hs  Error.hs  File.hs  Forms.hs  HTMX.hs  Htmx.hs  Index.hs  User.hs
src/Website/Data/: Common.hs  Entry.hs  Entry.hs-boot  Env.hs  Error.hs  File.hs  Permission.hs  Schema.hs  User.hs  Util.hs
src/Website/Network/: API.hs  Server.hs
src/Website/Network/API/: CRUD.hs  Types.hs
static/: main.css
test/: Main.hs
test/Test/: Api.hs  Db.hs  StateMachine.hs  Types.hs
test/Test/Db/: Entry.hs  File.hs  User.hs
test/Test/StateMachine/: Types.hs
