cabal-version:      3.0
name:               Website
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Owen Harvey
maintainer:         owenlharvey@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

flag tls
    default: False
    manual: True

common threads
    ghc-options: -threaded
                 -rtsopts
                 -with-rtsopts=-N

common depends
    build-depends:  base
                  , aeson
                  , blaze-html
                  , blaze-markup
                  , bytestring
                  , cmark
                  , directory
                  , filepath
                  , githash
                  , http-api-data
                  , jose
                  , mtl
                  , password
                  , servant
                  , servant-auth
                  , servant-auth-server
                  , servant-blaze
                  , servant-multipart
                  , servant-server
                  , sqlite-simple
                  , text
                  , time
                  , uuid
                  , warp
    if flag(tls)
        build-depends:
            warp-tls

common extensions
    default-extensions: DataKinds
                      , OverloadedRecordDot
                      , OverloadedStrings
                      , DuplicateRecordFields
                      , GeneralisedNewtypeDeriving
                      , ScopedTypeVariables
                      , ConstraintKinds
                      , CPP

common warnings
    ghc-options: -Wall
                 -Wunused-packages

library
    import:           warnings
    import:           extensions
    import:           depends
    import:           threads
    exposed-modules:  Website
                    , Website.Network.API
                    , Website.Network.API.Types
                    , Website.Network.API.CRUD
                    , Website.Network.Server
                    , Website.Content.Common
                    , Website.Content.Forms
                    , Website.Content.Error
                    , Website.Content.Entry
                    , Website.Content.User
                    , Website.Content.Htmx
                    , Website.Content.Index
                    , Website.Content.File
                    , Website.Types
                    , Website.Data.Util
                    , Website.Data.Env
                    , Website.Data.File
                    , Website.Data.Error
                    , Website.Data.Entry
                    , Website.Data.Permission
                    , Website.Data.Schema
                    , Website.Data.User
                    , Website.Auth.Authentication
                    , Website.Auth.Authorisation
                    , Free
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src
    default-language: GHC2021
    if flag(tls)
        cpp-options: -DTLS=1

executable Website
    import:           warnings
    import:           extensions
    import:           threads
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , Website
    hs-source-dirs:   app
    default-language: GHC2021

test-suite Website-test
    import:           warnings
    import:           extensions
    import:           threads
    default-language: GHC2021
    -- other-modules:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.StateMachine
                    , Test.Types
                    , Test.Api
                    , Test.Db
                    , Test.Db.Entry
                    , Test.Db.User
                    , Test.Db.File
    build-depends:  base
                  , Website
                  , aeson
                  , base64
                  , bytestring
                  , case-insensitive
                  , containers
                  , exceptions
                  , hedgehog
                  , http-api-data
                  , http-client
                  , http-types
                  , lens
                  , mtl
                  , raw-strings-qq
                  , regex-tdfa
                  , servant-auth-server
                  , servant-server
                  , sqlite-simple
                  , text
    if flag(tls)
        build-depends:
            crypton-connection,
            http-client-tls
        cpp-options: -DTLS=1